Added google analytics.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Sneha Kataria
 permalink: /:title.html
 theme: minima
 
-google_analytics: TO_BE_ADDED
+google_analytics: G-K52C9QRRNY
 
 description: >-
   Sneha Kataria's Blog
