--- a/_config.yml
+++ b/_config.yml
@@ -19,5 +19,6 @@ license_url: "creativecommons.org/licenses/by-nc-nd/4.0/"
 
 linkedin_username: snehakataria
 github_username: sneha-kataria
+email: snehakataria1244@gmail.com
 
 show_excerpts: true
