Revert "Testing theme."
This reverts commit 7319b80229ad4abdf08a3138ff9aeb8f39522540.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Sneha Kataria
 permalink: /:title.html
-#theme: minima
-theme: minimal-mistakes-jekyll
+theme: minima
 
 google_analytics: G-K52C9QRRNY
 
