Fixed author list.

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ defaults:
       path: "_posts"
     values:
       layout: post
-      author: sal
+      author: Sneha Kataria
       avatar: /assets/images/avatar1.jpg
 
   # all pages
